Fixed homepage live card clipping and removed overflow issues2

--- a/static/style.css
+++ b/static/style.css
@@ -167,7 +167,7 @@ body {
 
 .main {
 
-    margin-left: 340px;
+    margin-left: 360px;
 
     padding: 40px 40px;
 
